# py_labraries

fullbayes_classifier/: README.MD  pyproject.toml
fullbayes_classifier/src/fullbayes/: __init__.py  classifier.py
fullbayes_classifier/src/fullbayes.egg-info/: PKG-INFO  SOURCES.txt
fullbayes_classifier/src/fullbayes_iit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fullbayes_classifier/tests/: test_classifier.py
