[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fullbayes_iit"
version = "0.1.2"
description = "Full Covariance Gaussian Bayesian Classifier"
authors = [
    { name = "Anubhav Goyal" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]